--- a/app/views/auth_mailer/send_recovery_password_email.html.erb
+++ b/app/views/auth_mailer/send_recovery_password_email.html.erb
@@ -1,6 +1,6 @@
-<p>Prezado(a) <%=@resource.full_name%></p>
-<p>Segue sua nova senha para acesso ao GetCoins</p>
-<p>Para sua segurança favor altera-la após o primeiro acesso</p>
+<p>Dear <%=@resource.full_name%></p>
+<p>Here's your new password for GetCoins access.</p>
+<p>For your security change the password after the first access.</p>
 <p><%=@password%></p>
-<p>Atenciosamente,</p>
-<p>Equipe GetCoins.</p>
+<p>Best regards</p>
+<p>GetCoins Team.</p>
